<resources>
    <!--Java resources-->
    <string name="export_description">Singer Pro Export</string>
    <string name="internal_error">An internal error has happened. Please try again.</string>
    <string name="export_import_error_no_intent">You have to install an email (or a cloud) app to import/export files.</string>
    <string name="export_error_no_files">There is no file to export.</string>
    <string name="file_not_found">File %1$2s not found.</string>
    <string name="input_output_file_error">An error occurred while reading the file.</string>
    <string name="file_saved">File saved successfully!</string>
    <string name="file_saving_error">Problem while saving file %1$2s.</string>
    <string name="file_exists_error">The name %1$2s already exists in another file. Please change it and try again.</string>
    <string name="file_rename_error">Could not rename the file %1$2s.</string>
    <string name="file_name_required">Song name is required</string>
    <string name="song_number_required">Song number is required</string>
    <string name="lyric_content_required">Lyric content is required</string>
    <string name="set_list_name_required">Please provide a name for the set list</string>
    <string name="delete_files_question">Delete all selected files?</string>
    <string name="remove_from_playlist_question">Remove all selected lyrics from playlist?</string>
    <string name="delete_file_error">Error: The file %1$2s could not be deleted.</string>
    <string name="lyric_configuration">Scroll Speed: %1$d; Text Size: %2$d; Timers: %3$d</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="prompting_finished">Prompting finished successfully.</string>
    <string name="prompting_canceled">Prompting cancelled by user.</string>
    <string name="set_list_not_loaded">Playlist not loaded.</string>
    <string name="btn_remove_from_playlist_successful">Lyrics removed from playlist successfully.</string>
    <string name="bluetooth_enabled_successfully">Bluetooth activated.</string>
    <string name="bluetooth_disabled_successfully">Bluetooth disabled.</string>
    <string name="bluetooth_enabled_denied">Bluetooth access denied.</string>
    <string name="bluetooth_enable_dialog_title">Enable bluetooth?</string>
    <string name="bluetooth_paired_devices_dialog_title">Paired Device(s)</string>
    <string name="bluetooth_paired_devices_dialog_desc">Please choose one or more paired devices to share your screen with</string>
    <string name="search_no_results">No Results</string>


    <!--UI components resources-->
    <string name="tv_timeWaiting">Time stopped (%1$d): %2$d</string>
    <string name="tv_timeRunning">Time running (%1$d): %2$d</string>
    <string name="app_name_all_songs">All Songs</string>
    <string name="app_name">SingerPro</string>
    <string name="search_hint">Search SingerPro</string>
    <string name="maintain_lyric">Maintain Lyric</string>
    <string name="search_filtered">(Filtered)</string>
    <string name="btn_create_file_description">Create a new lyric file</string>
    <string name="btn_play_description">Play song</string>
    <string name="btn_config_description">Configuration for this lyric</string>
    <string name="btn_remove_from_playlist_description">Remove this song from set list</string>
    <string name="btn_test_config_description">Test lyric</string>
    <string name="et_text_file_hint">Type or paste your text here</string>
    <string name="btn_save_name">Save File</string>
    <string name="et_file_name_hint">Song Name</string>
    <string name="et_song_number_hint">Number</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_item_delete_files_title">Delete Files</string>
    <string name="menu_item_add_to_playlist_title">Add Lyrics to Playlist</string>
    <string name="menu_item_remove_from_playlist_title">Remove Lyrics from Playlist</string>
    <string name="menu_item_rename_playlist_title">Rename Playlist</string>
    <string name="menu_item_show_all_title">Show All Songs</string>
    <string name="menu_item_load_playlist_title">Load Playlist</string>
    <string name="menu_item_search_lyric">Search</string>
    <string name="menu_item_share_screen_title">Share Screen</string>
    <string name="menu_item_about_title">About</string>
    <string name="menu_item_donate_title">Donate</string>
    <string name="menu_item_export_title">Export Files</string>
    <string name="menu_item_import_title">Import Files</string>
    <string name="menu_item_global_options_title">Global Options</string>
    <string name="new_playlist">New Playlist</string>
    <string name="rename_playlist">Rename Playlist</string>
    <string name="load_existing_playlist">Load Existing Playlist</string>
    <string name="add_song_playlist">Add Lyric(s) to Playlist</string>
    <string name="copyright_developer">SingerPro - version 3.1.2\nEasyApps</string>

    <!-- Strings related to Preferences -->
    <string name="pref_summary_scrollSpeed">Defines how fast the screen must scroll. It will decrease with higher values.</string>
    <string name="pref_summary_timeWaiting">How much time (in seconds) should the screen keep frozen.</string>
    <string name="pref_summary_timeRunning">How much time (in seconds) should the screen keep running normally. If zero, it will run indefinitely. Consequently, if a timer with zero is not the last, the other ones won\'t make any difference.</string>
    <string name="pref_summary_totalTimers">How many timers will execute while prompting. After changed, the amount of time that the lyric is stopped and running on the screen must be set for each timer. The execution sequence follows exactly the way as the timers are placed here.</string>
    <string name="pref_summary_textSize">Size of the text prompted.</string>
    <string name="pref_summary_htmlFormatted">When true, the text style will be enriched with HTML formatting. Any HTML tags present in the lyric will be considered to format it.</string>
    <string name="pref_title_scrollSpeed">Scroll speed</string>
    <string name="pref_title_textSize">Text size</string>
    <string name="pref_title_totalTimers">Timers to execute</string>
    <string name="pref_title_timeWaiting">Time stopped (%1$d)</string>
    <string name="pref_title_timeRunning">Time running (%1$d)</string>
    <string name="pref_backgroundColor">Background Prompter Color</string>
    <string name="pref_fontFamily">Font Family</string>
    <string name="pref_textColor">Text Prompter Color</string>
    <string name="pref_automaticPlayingNext">Automatic Playing</string>
    <string name="pref_isBluetoothEnabled">Share Prompter With Paired Devices</string>
    <string name="pref_bluetooth">Bluetooth</string>
    <string name="pref_bluetoothPairedDevices">Paired Devices</string>
    <string name="pref_bluetoothAvailableDevices">Available Devices</string>
    <string name="pref_pairedDevices">Available Devices</string>
    <string name="pref_prompterFontsAndColors">Prompter Fonts and Colors</string>
    <string name="pref_title_playNext">Play Next Automatically</string>
    <string name="pref_title_htmlFormatted">Html Formatted Text</string>
    <string name="pref_title_timeBeforeStart">Time Before Start Prompting</string>
    <string name="pref_summary_timeBeforeStart">How much time (in seconds) the app must wait before start prompting the next song in the current set list.</string>

    <!--Not translated resources-->
    <string name="pref_key_backgroundColor" translatable="false">pref_backgroundColor</string>
    <string name="pref_key_fontFamily" translatable="false">pref_fontFamily</string>
    <string name="pref_key_htmlFormatted" translatable="false">pref_htmlFormatted</string>
    <string name="pref_textColor_default">-1</string>
    <string name="pref_key_playNext" translatable="false">pref_playNext</string>
    <string name="pref_key_timeBeforeStart" translatable="false">pref_timeBeforeStart</string>
    <string name="pref_key_currentPlaylistName" translatable="false">pref_currentPlaylistName</string>
    <string name="pref_key_currentSelectedLyric" translatable="false">pref_currentSelectedLyric</string>
    <string name="pref_key_currentListViewPosition" translatable="false">pref_currentListViewPosition</string>
    <string name="pref_key_currentListViewPositionOffset" translatable="false">pref_currentListViewPositionOffset</string>
    <string name="pref_key_isNewLyric" translatable="false">pref_isNewLyric</string>
    <string name="pref_key_clickedOnLyric" translatable="false">pref_clickedOnLyric</string>
    <string name="app_logo_description" translatable="false">App logo</string>
    <string name="pref_key_scrollSpeed" translatable="false">pref_scrollSpeed</string>
    <string name="pref_key_totalTimers" translatable="false">pref_totalTimers</string>
    <string name="pref_key_timeWaiting" translatable="false">pref_timeWaiting</string>
    <string name="pref_key_timeRunning" translatable="false">pref_timeRunning</string>
    <string name="pref_key_textSize" translatable="false">pref_textSize</string>
    <string name="pref_key_songNumber" translatable="false">pref_songNumber</string>
    <string name="pref_fontFamily_default" translatable="false">sans-serif</string>
    <string name="pref_backgroundColor_default" translatable="false">-16777216</string>
    <string name="pref_key_textColor" translatable="false">pref_textColor</string>
    <string name="title_activity_search" translatable="false">SearchActivity</string>
</resources>
