<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.easyapps.singerpro.presentation.activity.MainActivity">
    <!--<item-->
        <!--android:icon="@drawable/ic_screen_share"-->
        <!--android:id="@+id/menu_share_screen"-->
        <!--android:title="@string/menu_item_share_screen_title"-->
        <!--android:orderInCategory="93"-->
        <!--app:showAsAction="ifRoom"-->
        <!--android:onClick="shareScreen"/>-->
    <item
        android:icon="@drawable/ic_search"
        android:id="@+id/menu_search_lyric"
        android:title="@string/menu_item_search_lyric"
        android:orderInCategory="93"
        app:showAsAction="always"
        android:onClick="search"/>
    <item
        android:icon="@drawable/ic_settings"
        android:id="@+id/menu_lyric_settings_main"
        android:title="@string/btn_config_description"
        android:orderInCategory="94"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:onClick="startSettingsFromMain"/>
    <item
        android:icon="@drawable/ic_playlist_load"
        android:id="@+id/menu_load_playlist"
        android:title="@string/menu_item_load_playlist_title"
        android:orderInCategory="95"
        app:showAsAction="ifRoom"
        android:onClick="loadPlaylist"/>
    <item
        android:id="@+id/menu_rename_playlist"
        android:title="@string/menu_item_rename_playlist_title"
        android:orderInCategory="96"
        app:showAsAction="never"
        android:visible="false"
        android:onClick="renameSetList"/>
    <item
        android:id="@+id/menu_show_all"
        android:title="@string/menu_item_show_all_title"
        android:orderInCategory="97"
        app:showAsAction="never"
        android:onClick="showAllLyrics"/>
    <item
        android:id="@+id/menu_export"
        android:title="@string/menu_item_export_title"
        android:orderInCategory="101"
        app:showAsAction="never"
        android:onClick="startExport"/>
    <item
        android:id="@+id/menu_import"
        android:title="@string/menu_item_import_title"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:onClick="startImport"/>
    <item
        android:id="@+id/menu_general_options"
        android:title="@string/menu_item_global_options_title"
        android:orderInCategory="103"
        app:showAsAction="never"
        android:onClick="startGlobalSettings"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_item_about_title"
        android:orderInCategory="104"
        app:showAsAction="never"
        android:onClick="startAbout"/>
</menu>