<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_playlist_add"
        android:id="@+id/menu_add_to_playlist"
        android:title="@string/menu_item_add_to_playlist_title"
        android:orderInCategory="99"
        app:showAsAction="ifRoom"
        />
    <item
        android:icon="@drawable/ic_playlist_delete"
        android:id="@+id/menu_remove_from_playlist"
        android:title="@string/menu_item_remove_from_playlist_title"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />
    <item
        android:icon="@drawable/ic_delete"
        android:id="@+id/menu_delete"
        android:title="@string/menu_item_delete_files_title"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        />
</menu>