<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.easyapps.teleprompter.presentation.CreateLyricActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTextFile"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:enabled="true"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnSave"
        android:layout_below="@+id/etFileName"
        android:hint="@string/et_text_file_hint" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_name"
        android:contentDescription="@string/btn_save_name"
        android:id="@+id/btnSave"
        android:onClick="SaveFile"
        android:background="@drawable/ic_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etFileName"
        android:layout_alignEnd="@+id/etTextFile"
        android:inputType="text"
        android:hint="@string/et_file_name_hint"
        android:layout_toEndOf="@+id/etSongNumber" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSongNumber"
        android:inputType="number"
        android:hint="@string/et_song_number_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
