<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.easyapps.singerpro.presentation.activity.MaintainLyricActivity">

    <EditText
        android:id="@+id/etTextFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSave"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etFileName"
        android:enabled="true"
        android:gravity="start"
        android:hint="@string/et_text_file_hint"
        android:inputType="textMultiLine"
        android:nextFocusForward="@+id/btnSave"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:fontFamily="monospace"/>

    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_save_name"
        android:src="@drawable/ic_save"
        android:text="@string/btn_save_name" />

    <EditText
        android:id="@+id/etFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etTextFile"
        android:layout_alignRight="@+id/etTextFile"
        android:layout_toEndOf="@+id/etSongNumber"
        android:layout_toRightOf="@+id/etSongNumber"
        android:hint="@string/et_file_name_hint"
        android:inputType="text"
        android:maxLength="@integer/number_max_song_name_size"
        android:nextFocusForward="@+id/etTextFile" />

    <EditText
        android:id="@+id/etSongNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/et_song_number_hint"
        android:inputType="number"
        android:nextFocusDown="@+id/etFileName"
        android:nextFocusForward="@+id/etFileName"
        android:nextFocusLeft="@+id/etFileName"
        android:nextFocusRight="@+id/etFileName" />

</RelativeLayout>
